@@ -1,6 +1,15 @@
 2006-12-07  Brian Bidulock  <bidulock@openss7.org>
 
+	* src/modules/x400p-ss7/sl_x400p.c:
+	  - more corrections from testing
+	  - reference counting corrected
+	  - assign board correctly for irq assignment
+	  - correct module aliasing for demand loading
+
+	* src/include/ss7/sdli_ioctl.h: line reversal
+	* src/util/sdlconf.c: line reversal
 	* src/modules/x400p-ss7/sl_x400p.c: corrections from testing
+	* src/modules/x400p-ss7/sl_x100p.c: corrected conflicting alias
 
 	* src/util/init/README: added init scripts
 	* src/util/init/strss7: added init scripts
